fix overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -11,6 +11,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 .container {
@@ -176,6 +177,7 @@ input[type="text"]:focus, input[type="email"]:focus {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); 
+    overflow-y: auto;
 }
 
 .modal-content {
